test/files/pos/bug3642/bug3642_2.scala
object T {
  Tuppel_1.get
}