test/files/neg/t10507/Test_2.scala
object Test_2 {
  Macros_1.seq
}
